--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>Ricetta Pancake</title>
 </head>
 <body>
-    
+    <h1> Ricetta Pancake allo sciroppo d'acero</h1>
+    <hr />
+    <section>
+      <h2>Ingredienti</h2>
+      <h4>PER CIRCA 12 PANCAKE</h4> 
+      <hr>
+      <ul>
+        <li><b> Farina 00</b> 125g</li>
+        <li><b> Burro</b> 25g</li>
+        <li><b> Uova</b> 2</li>
+        <li><b> Sale fino</b> q.b.</li>
+      </ul> 
+    </section>
+    <section>
+        <h2>Preparazione</h2>
+        <ol>
+            <li>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae fugiat praesentium quibusdam aliquid voluptates dolorem minima eum architecto possimus dicta suscipit obcaecati sapiente commodi quod laboriosam, tenetur ut voluptate eius.
+            </li>
+            <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, voluptate deserunt quidem non sunt soluta, optio a corrupti fugit nam voluptatum facere explicabo vel dolor hic vero laboriosam numquam ducimus.
+            </li>
+            <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime voluptas vitae quaerat officia magnam minus expedita rerum consectetur. Laboriosam voluptate nulla eum consequatur pariatur numquam velit magnam cum consequuntur molestiae?
+            </li>
+        </ol>
+    </section>
 </body>
 </html>
